--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -63,7 +63,9 @@
                 <tr th:each="a,status:${accountPage}">
                     <td th:text="${status.count}"></td>
                     <td th:text="${a.accountName}"></td>
-                    <td th:text="${a.role.roleName}"></td>
+                    <td th:text="${a.role.roleName=='employee'}?'Nhân viên':'Quản trị viên'">
+
+                    </td>
 <!--                    <td>-->
 <!--                        <a th:href="" class="btn btn-primary"><i-->
 <!--                                class="fa-solid fa-circle-info"></i></a>-->
@@ -75,7 +77,7 @@
 <!--                    </td>-->
                     <td>
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                        <button th:if="${a.role.roleName!='admin'}" type="button" class="btn btn-danger" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal"
                                 th:attr="onclick=|confirm('${a.accountName}')|">
                             <i class="fa-regular fa-trash-can"></i>
@@ -83,16 +85,27 @@
                     </td>
                 </tr>
             </table>
-            <div class="d-flex justify-content-center">
-                <a style="text-decoration: none" th:if="${accountPage.hasPrevious()}"
-                   th:href="@{/account/admin(page=${(accountPage.number)-1},searchName=${searchName})}">
-                    <button class="btn btn-primary">Prev</button>
-                </a>
-                <span th:text="${accountPage.number+1}"></span>/<span th:text="${accountPage.totalPages}"></span>
-                <a style="text-decoration: none" th:if="${accountPage.hasNext()}"
-                   th:href="@{/account/admin(page=${accountPage.number+1},searchName=${searchName})}">
-                    <button class="btn btn-primary">Next</button>
-                </a>
+            <!-----------------------------------------Phân trang----------------------------------------->
+            <div th:if="${accountPage.totalPages >0}">
+                <div class="d-flex justify-content-center">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li th:class="${!accountPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
+                                <a class="page-link"
+                                   th:href="@{/account/admin(page=${(accountPage.number)-1},searchName=${searchName})}">Lùi
+                                </a>
+                            </li>
+                            <li class="page-link disabled"><span th:text="${accountPage.number+1}"></span>/<span
+                                    th:text="${accountPage.totalPages}"></span>
+                            </li>
+                            <li th:class="${!accountPage.hasNext()} ? 'page-item disabled' : 'page-item'">
+                                <a class="page-link"
+                                   th:href="@{/account/admin(page=${accountPage.number+1},searchName=${searchName})}">Tới
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
@@ -119,6 +132,20 @@
         </div>
     </div>
 </div>
+<!-------------------------Toast-------------------------------------------------------------->
+<div class="position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Tin nhắn</strong>
+            <small>Bây giờ</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body text-info" th:text="${msg}">
+        </div>
+    </div>
+</div>
+<!-------------------------End Toast-------------------------------------------------------------->
+
 
 <div th:replace="~{layout::footer}"></div>
 <script>
@@ -127,16 +154,15 @@
         document.getElementById("accountName").value = name;
     }
 
-    // toast
-    function showToast(message) {
-        var toast = document.getElementById("toast");
-        toast.innerText = message;
-        toast.classList.add("show");
-        setTimeout(function () {
-            toast.classList.remove("hide");
-        }, 3000);
-    }
 
+</script>
+<script th:if="${msg}">
+    // toast
+    window.onload = function () {
+        let myAlert = document.getElementById('liveToast');//select id of toast
+        let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
+        bsAlert.show();//show it
+    }
 </script>
 
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
