--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -111,7 +111,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                     <li><a class="dropdown-item" href="/user/update-form">Thông tin</a></li>
-                                    <li><a class="dropdown-item" href="/account/login">Đăng nhập</a></li>
+                                    <li><a class="dropdown-item" href="/account/change-password">Đổi mật khẩu</a></li>
                                     <li><a class="dropdown-item" href="/account/logout">Đăng xuất</a></li>
                                 </ul>
                             </div>
