--- a/coffee_project/src/main/resources/templates/user/new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/new-employee.html
@@ -27,7 +27,7 @@
 
                     <!------------------CODE------------------------------->
                     <h1 class="col-11" style="margin-top: 2rem;text-align: center">
-                        Danh Sách Nhân Viên Mới</h1>
+                        Quản Lý Nhân Viên Mới</h1>
 
                     <table class="table table-hover table-responsive" style="margin-top: 70px">
                         <thead>
